# splunkguard

./: .env.example  ARCHITECTURE.md  LICENSE  README.md  pyproject.toml
splunkguard/: __init__.py  agent.py  cli.py  models.py  prompts.py
splunkguard/backends/: __init__.py  mcp.py
