[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "splunkguard"
version = "0.1.0"
description = "AI-powered Splunk incident diagnostics using Gemini 2.0 Flash + Splunk MCP Server"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "google-genai>=0.8.0",
    "mcp>=1.0.0",
    "click>=8.1.0",
    "rich>=13.0.0",
    "python-dotenv>=1.0.0",
    "anyio>=4.0.0",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-asyncio>=0.23"]

[project.scripts]
splunkguard = "splunkguard.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["splunkguard"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
